# wallbot

./: .gitignore  Cargo.toml  README.md
migrations/2025-07-05-064811_create_initial_tables/: down.sql  up.sql
src/: bot_identity.rs  lib.rs  main.rs  model.rs  schema.rs
